--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,21 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@userfront/react": "^0.2.17",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "build": "^0.1.4",
-    "http-proxy-middleware": "^1.3.1",
+    "framer-motion": "^4.1.17",
+    "http-proxy-middleware": "^2.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "save": "^2.4.0",
     "styled-components": "^5.3.0",
+    "swr": "^0.5.6",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -44,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
