--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "backend": "nodemon server.js",
     "frontend": "cd frontend && yarn start",
-    "dev": "concurrently \"npm start Back-end\" \"npm run frontend\" ",
+    "dev": "concurrently \"npm start Back-end\" \"npm yarn frontend\" ",
     "start": "node server.js"
   },
   "keyworlds": [
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "ls": "^0.2.1",
     "mongoose": "^5.12.4",
     "notenv": "^2.0.3",
